# erpnext15_custom

./: README.md  pyproject.toml
erpnext15_custom/: hooks.py  modules.txt
erpnext15_custom/erpnext15_custom/doctype/xxyz/: test_xxyz.py  xxyz.js  xxyz.json  xxyz.py
erpnext15_custom/erpnext15_custom/doctype/xyz/: test_xyz.py  xyz.js  xyz.json  xyz.py
erpnext15_custom/erpnext15_custom/report/[report]_employees_resuming_from_leave_this_week/: [report]_employees_resuming_from_leave_this_week.json
erpnext15_custom/erpnext15_custom/report/[report]_leaves_started_in_the_previous_month/: [report]_leaves_started_in_the_previous_month.json
erpnext15_custom/erpnext15_custom/report/employee_on_leave_this_week/: employee_on_leave_this_week.json
erpnext15_custom/erpnext15_custom/report/leaves_started_in_previous_month/: leaves_started_in_previous_month.json
erpnext15_custom/erpnext15_custom/report/leaves_started_in_the_previous_month/: leaves_started_in_the_previous_month.json
erpnext15_custom/erpnext15_custom/workspace/employee_zone/: employee_zone.json
erpnext15_custom/fixtures/: auto_email_report.json  client_script.json  custom_field.json  custom_html_block.json  department.json  module_profile.json  notification.json  print_format.json  property_setter.json  report.json  role.json  role_profile.json  workflow.json  workflow_action_master.json  workflow_state.json  workspace.json
erpnext15_custom/my_scripts/: CustomEmployee.py  birthday_reminder.py  leave_application.py  upcoming_holidays.py  workflow.py
erpnext15_custom/public/css/custom/: erpnext15_custom.css
(+2 files in other folders)
